...
              key: _formKey,
              child: Column(
                children: <Widget>[
                  Padding(
                    padding: EdgeInsets.only(top: currentScreenHeight * 0.05),
                    child: const Text(
                      'Sign Up',
                      textAlign: TextAlign.center,
                      style: TextStyle(
                        fontWeight: FontWeight.w600,
                        fontSize: 25,
                      ),
                    ),
...
                        color: Colors.grey[200],
                        borderRadius: BorderRadius.circular(12),
                      ),
                      child: Padding(
                        padding: const EdgeInsets.only(left: 5),
                        child: TextFormField(
                          key: const Key("usernameField"),
                          controller: usernameController,
                          decoration: const InputDecoration(
                            contentPadding: EdgeInsets.symmetric(vertical: 15),
                            border: InputBorder.none,
                            labelText: 'Username',
                            hintText: 'Enter your username',
...
                              Icons.account_circle_outlined,
                              color: Colors.deepPurple,
                            ),
                          ),
                          validator: (String? value) {
                            if (value == null || value.isEmpty) {
                              return 'Please input a username';
                            }
                            return null;
                          },
                        ),
                      ),
                    ),
...
                        color: Colors.grey[200],
                        borderRadius: BorderRadius.circular(12),
                      ),
                      child: Padding(
                        padding: const EdgeInsets.only(left: 5),
                        child: TextFormField(
                          key: const Key("emailField"),
                          controller: emailController,
                          decoration: const InputDecoration(
                            contentPadding: EdgeInsets.symmetric(vertical: 15),
                            border: InputBorder.none,
                            labelText: 'Email',
                            hintText: 'Enter your email',
...
                          ),
                          // Checking for an NUS email using Regex
                          validator: (String? value) {
                            if (!RegExp(
                                    r"^[a-zA-Z0-9.a-zA-Z0-9.!#$%&'*+-/=?^_`{|}~]+@u.nus.edu")
                                .hasMatch(value!)) {
                              return 'Please input an NUS email';
                            }
                            return null;
                          },
                        ),
                      ),
                    ),
...
                      decoration: BoxDecoration(
                          color: Colors.grey[200],
                          borderRadius: BorderRadius.circular(12)),
                      child: Padding(
                        padding: const EdgeInsets.only(left: 5),
                        child: TextFormField(
                          key: const Key("passwordField"),
                          controller: passwordController,
                          decoration: InputDecoration(
                            contentPadding:
                                const EdgeInsets.symmetric(vertical: 15),
                            border: InputBorder.none,
                            labelText: 'Password',
...
                            errorMaxLines: 3,
                          ),
                          validator: (String? value) {
                            RegExp regex = RegExp(
                                r'^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[!@#\$&*~]).{8,}$');
                            if (value == null || value.isEmpty) {
                              return 'Please input your password';
                            }
                            if (!regex.hasMatch(value)) {
                              return 'Password should contain at least one '
                                  'upper case, one lower case, one digit, '
                                  'one special character, and be at least '
                                  '8 characters long';
...
                      decoration: BoxDecoration(
                          color: Colors.grey[200],
                          borderRadius: BorderRadius.circular(12)),
                      child: Padding(
                        padding: const EdgeInsets.only(left: 5),
                        child: TextFormField(
                          key: const Key("confirmPasswordField"),
                          controller: confirmPassController,
                          decoration: InputDecoration(
                            contentPadding:
                                const EdgeInsets.symmetric(vertical: 15),
                            border: InputBorder.none,
                            labelText: 'Confirm Password',
...
                                color: Colors.deepPurple,
                              ),
                            ),
                          ),
                          validator: (String? value) {
                            if (value == null || value.isEmpty) {
                              return 'Please confirm your password';
                            }
                            if (value != passwordController.text) {
                              return 'Password does not match';
                            }
                            return null;
                          },
                          obscureText: !_passwordVisible2,
                          onFieldSubmitted: submit,
                        ),
...
                        ),
                        // Create Button, with function to create user in Firebase
                        SizedBox(
                          width: 100.0,
                          height: 40.0,
                          child: ElevatedButton(
                            key: const Key("createUser"),
                            style: ElevatedButton.styleFrom(
                              primary: Colors.deepPurple,
                            ),
                            onPressed: () => submit(null),
                            child: const Text(
                              'Create',
...
