...
                  padding: EdgeInsets.only(top: currentScreenHeight * 0.05),
                  child: Form(
                    key: _formKey,
                    child: Column(
                      children: <Widget>[
                        const Text(
                          'Log In',
                          textAlign: TextAlign.center,
                          style: TextStyle(
                            fontWeight: FontWeight.w600,
                            fontSize: 25,
                          ),
                        ),
...
                              color: Colors.grey[200],
                              borderRadius: BorderRadius.circular(12),
                            ),
                            child: Padding(
                              padding: const EdgeInsets.only(left: 5),
                              child: TextFormField(
                                key: const Key("emailFormField"),
                                controller: emailController,
                                decoration: const InputDecoration(
                                  contentPadding:
                                      EdgeInsets.symmetric(vertical: 15),
                                  border: InputBorder.none,
                                  labelText: 'Email',
...
                                    Icons.mail_outline,
                                    color: Colors.deepPurple,
                                  ),
                                ),
                                validator: (String? value) {
                                  if (value == null || value.isEmpty) {
                                    return 'Please input your email';
                                  }
                                  return null;
                                },
                                onFieldSubmitted: _submit,
                              ),
                            ),
...
                            decoration: BoxDecoration(
                                color: Colors.grey[200],
                                borderRadius: BorderRadius.circular(12)),
                            child: Padding(
                              padding: const EdgeInsets.only(left: 5),
                              child: TextFormField(
                                key: const Key("passwordFormField"),
                                controller: passwordController,
                                decoration: InputDecoration(
                                  contentPadding:
                                      const EdgeInsets.symmetric(vertical: 15),
                                  border: InputBorder.none,
                                  labelText: 'Password',
...
                          padding:
                              EdgeInsets.only(top: currentScreenHeight * 0.02),
                          child: SizedBox(
                            width: 350.0,
                            height: 55.0,
                            child: ElevatedButton(
                              key: const Key("loginButton"),
                              style: ElevatedButton.styleFrom(
                                primary: Colors.deepPurple,
                              ),
                              child: const Text(
                                'Login!',
                                style: TextStyle(
...
                      "Not registered yet?",
                      style: TextStyle(fontWeight: FontWeight.bold),
                    ),
                    Padding(
                      padding: const EdgeInsets.symmetric(),
                      child: TextButton(
                        key: const Key("signupButton"),
                        onPressed: () {
                          Navigator.pushNamed(context, '/signup');
                        },
                        child: const Text(
                          "Sign up here!",
                          style: TextStyle(
...
        emailController.clear();
        passwordController.clear();
        Navigator.pushNamed(context, '/questions');
      } on FirebaseAuthException catch (e) {
        // Login failure, take note of the cause
        if (e.code == 'invalid-email' || e.code == 'wrong-password') {
          _exception = 'The email or password is wrong, please try again';
        } else if (e.code == 'user-not-found') {
          _exception = 'This email is not used, try creating instead';
        } else if (e.code == 'email-not-verified') {
          _exception = 'Please verify your email before logging in';
        }
      } catch (e) {
        // For debugging purposes
        if (kDebugMode) {
          print(e);
        }
...
